test/cases/compile_errors/import_by_absolute_path.zig
comptime{
    _ = @import("/usr/local/foo.zig");
}

// error
// backend=stage2
// target=native
//
// :1:17: error: cannot import by absolute path
